--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -293,6 +293,10 @@ h3 {
   position: relative;
 }
 
+.note h1 {
+  font-size: 1rem;
+}
+
 .note-head {
   background: #f4f4f4;
   padding: 5px 20px;
